deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: income-expense-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: income-expense
  template:
    metadata:
      labels:
        app: income-expense
    spec:
      containers:
      - name: income-expense
        image: 173471018017.dkr.ecr.us-east-1.amazonaws.com/income-expense:latest
        ports:
        - containerPort: 80
