service.yaml
apiVersion: v1
kind: Service
metadata:
  name: income-expense-service
spec:
  type: LoadBalancer
  selector:
    app: income-expense
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
